@@ -10,7 +10,7 @@ rm hudson.war || true
 
 tag=hudson-$(show-pom-version pom.xml | sed -e "s/-SNAPSHOT//g" -e "s/\\./_/g")
 mvn -B -Dtag=$tag release:prepare || mvn -B -Dtag=$tag install release:prepare
-mvn release:perform
+MAVEN_OPTS="-Xmx256m -XX:MaxPermSize=128m" mvn release:perform
 
 id=$(show-pom-version target/checkout/pom.xml)
 #./publish-javadoc.sh
